test/testdata/result/invalid_binary_op_error.lox
(try 1) - (try 2); // error: '-' operator cannot be used with types 'result' and 'result'
